--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -5,7 +5,7 @@
 // Reset and dependencies
 @import "normalize.less";
 @import "print.less";
-@import "glyphicons.less";
+@import "fontawesome.less";
 
 // Core CSS
 @import "scaffolding.less";
